--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,22 @@
 </head>
 <body>
   <div class="root">
-    <h1>news</h1>
+    <header class="header">
+      <div class="header__container">
+        <div class="header__logo">NewsExplorer</div>
+        <ul class="header__nav">
+          <li>
+            <a class="header__link header__link_active" href="#">Главная</a>
+          </li>
+          <li>
+            <a class="header__link" href="#">Сохраненные статьи</a>
+          </li>
+          <li>
+            <a class="header__button" href="#">Авторизоваться</a>
+          </li>
+        </ul>
+      </div>
+    </header>
   </div>
   <script src="<%= htmlWebpackPlugin.files.js %>"></script>
 </body>
