--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>News exprorer</title>
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css %>">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="root">
@@ -25,6 +26,27 @@
         </ul>
       </div>
     </header>
+    <div class="hero">
+      <div class="hero__container">
+        <h1 class="hero__title">Что творится в мире?</h1>
+        <p class="hero__description">Находите самые свежие статьи на любую тему и сохраняйте в своём личном кабинете.</p>
+        <form class="hero__search" action="">
+          <input type="text" class="hero__input" placeholder="Введите тему новости">
+          <input type="submit" class="hero__submit" value="Искать">
+        </form>
+      </div>
+    </div>
+    <div class="author">
+      <div class="author__container">
+        <div class="author__image"></div>
+        <div class="author__info">
+          <h2 class="author__title"> Об авторе</h2>
+          <p class="author__description">Меня зовут Татьяна Ткаченко. </p>
+          <p class="author__description"></p>
+        </div>
+      </div>
+    </div>
+    <footer class="footer"></footer>
   </div>
   <script src="<%= htmlWebpackPlugin.files.js %>"></script>
 </body>
