add blocks cards and footer

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         </ul>
       </div>
     </header>
-    <div class="hero">
+    <section class="hero">
       <div class="hero__container">
         <h1 class="hero__title">Что творится в мире?</h1>
         <p class="hero__description">Находите самые свежие статьи на любую тему и сохраняйте в своём личном кабинете.</p>
@@ -35,8 +35,89 @@
           <input type="submit" class="hero__submit" value="Искать">
         </form>
       </div>
-    </div>
-    <div class="author">
+    </section>
+    <section class="section">
+      <div class="section__container">
+        <h2 class="section__title">Результаты поиска</h2>
+          <div class="cards">
+            <a class="card" href="#">
+              <div class="card__info">
+                <div class="card__tag">Природа</div>
+                <div class="card__action">
+                  <div class="card__action-tooltip">Войдите, чтобы сохранять статьи</div>
+                  <div class="card__icon">
+                    <img src="<%=require('./images/bookmark-icon.svg').default%>" alt="bookmark card">
+                  </div>
+                </div>
+              </div>
+              <div class="card__image"></div>
+              <div class="card__container">
+                <p class="card__date">2 августа, 2019</p>
+                <p class="card__title">Национальное достояние – парки</p>
+                <p class="card__description">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
+                <p class="card__source">Лента.ру</p>
+              </div>
+            </a>
+            <a class="card" href="#">
+              <div class="card__info">
+                <div class="card__tag">Природа</div>
+                <div class="card__action">
+                  <div class="card__action-tooltip">Войдите, чтобы сохранять статьи</div>
+                  <div class="card__icon">
+                    <img src="<%=require('./images/bookmark-icon.svg').default%>" alt="bookmark card">
+                  </div>
+                </div>
+              </div>
+              <div class="card__image"></div>
+              <div class="card__container">
+                <p class="card__date">2 августа, 2019</p>
+                <p class="card__title">Лесные огоньки: история одной фотографии</p>
+                <p class="card__description">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного из местных чудес природы.</p>
+                <p class="card__source">Медуза</p>
+              </div>
+            </a>
+            <a class="card" href="#">
+              <div class="card__info">
+                <div class="card__tag">Природа</div>
+                <div class="card__action">
+                  <div class="card__icon card__icon_active">
+                    <img src="<%=require('./images/bookmarked-icon.svg').default%>" alt="bookmark card">
+                  </div>
+                </div>
+              </div>
+              <div class="card__image"></div>
+              <div class="card__container">
+                <p class="card__date">2 августа, 2019</p>
+                <p class="card__title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</p>
+                <p class="card__description">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
+                <p class="card__source">Риа</p>
+              </div>
+            </a>
+            <!-- <a class="card" href="#">
+              <div class="card__info">
+                <div class="card__tag">Природа</div>
+                <div class="card__action">
+                  <div class="card__action-tooltip">Войдите, чтобы сохранять статьи</div>
+                  <div class="card__icon">
+                    <img src="<%=require('./images/bookmark-icon.svg').default%>" alt="bookmark card">
+                  </div>
+                </div>
+              </div>
+              <div class="card__image"></div>
+              <div class="card__container">
+                <p class="card__date">2 августа, 2019</p>
+                <p class="card__title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</p>
+                <p class="card__description">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
+                <p class="card__source">Риа</p>
+              </div>
+            </a> -->
+          </div>
+          <div class="text-center">
+            <a class="button" href="#">Показать еще</a>
+          </div>
+      </div>
+    </section>
+    <section class="author">
       <div class="author__container">
         <div class="author__image"></div>
         <div class="author__info">
@@ -45,8 +126,26 @@
           <p class="author__description"></p>
         </div>
       </div>
-    </div>
-    <footer class="footer"></footer>
+    </section>
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__site-info">© 2020 Supersite, Powered by News API</div>
+        <div class="footer__navigation">
+          <div class="footer__links">
+            <a href="/" class="footer__link">Главная</a>
+            <a href="#" class="footer__link">Яндекс.Практикум</a>
+          </div>
+          <div class="footer__socials">
+            <a href="#" class="footer__social">
+              <img src="<%=require('./images/facebook-icon.svg').default%>" alt="facebook-icon">
+            </a>
+            <a href="#" class="footer__social">
+              <img src="<%=require('./images/github-icon.svg').default%>" alt="github-icon">
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
   <script src="<%= htmlWebpackPlugin.files.js %>"></script>
 </body>
