finish my-profile page

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
               </div>
             </a> -->
           </div>
-          <div class="text-center">
+          <div class="text-center padding-bottom-80">
             <a class="button" href="#">Показать еще</a>
           </div>
       </div>
