add signup popup

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
         </div>
       </div>
     </section>
-    <div class="popup popup_is-opened" id="login-popup">
+    <div class="popup" id="login-popup">
       <div class="popup__content">
         <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close" id="login-popup-close">
         <h3 class="popup__title">Вход</h3>
@@ -145,6 +145,36 @@
           <div class="text-center">
             <button disabled type class="button button_is-fullwidth">Войти</button>
             <p class="popup__description">или <a class="link" href="#">Зарегистрироваться</a></p>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="popup" id="signup-popup">
+      <div class="popup__content">
+        <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close" id="signup-popup-close">
+        <h3 class="popup__title">Регистрация</h3>
+        <form class="popup__form" novalidate name="signup">
+          <div class="input-container">
+            <label for="signup-name" class="popup__label">Имя</label>
+            <input type="text" name="signup-name" class="popup__input" placeholder="Введите имя" required minlength="2" maxlength="30">
+            <span class="error-message" id="signup-error-name"></span>
+          </div>
+          <div class="input-container">
+            <label for="signup-email" class="popup__label">Email</label>
+            <input type="email" name="signup-email" class="popup__input" placeholder="Введите почту" required>
+            <span class="error-message" id="signup-error-email">Неправильный формат email</span>
+          </div>
+          <div class="input-container">
+            <label for="signup-password" class="popup__label">Пароль</label>
+            <input type="password" name="signup-password" class="popup__input" placeholder="Введите пароль" required minlength="8">
+            <span class="error-message" id="signup-error-password"></span>
+          </div>
+          <div class="popup__error" id="signup-form-error">
+            Такой пользователь уже есть
+          </div>
+          <div class="text-center">
+            <button type class="button button_brand button_is-fullwidth">Зарегистрироваться</button>
+            <p class="popup__description">или <a class="link" href="#">Войти</a></p>
           </div>
         </form>
       </div>
