--- a/src/my-profile.html
+++ b/src/my-profile.html
@@ -13,6 +13,7 @@
     <header class="header header_dark">
       <div class="header__container">
         <div class="header__logo header__logo_dark">NewsExplorer</div>
+        <img class="header__burger" src="<%=require('./images/menu-icon-black.svg').default%>" alt="menu icon">
         <ul class="header__nav">
           <li>
             <a class="header__link header__link_dark header__link_active" href="#">Главная</a>
@@ -29,7 +30,7 @@
         </ul>
       </div>
     </header>
-    <section class="section section_white">
+    <section class="section section_white section_top">
       <div class="section__container">
         <p class="section__aside">Сохранённые статьи</p>
         <h2 class="section__title">Грета, у вас 5 сохранённых статей</h2>
