add mobile popup

--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
           </div>
           <div class="text-center">
             <button disabled type class="button button_is-fullwidth">Войти</button>
-            <p class="popup__description">или <a class="link" href="#">Зарегистрироваться</a></p>
+            <p class="popup__description">или <a class="link" id="signup-link" href="#">Зарегистрироваться</a></p>
           </div>
         </form>
       </div>
@@ -166,7 +166,7 @@
           </div>
           <div class="text-center">
             <button type class="button button_brand button_is-fullwidth">Зарегистрироваться</button>
-            <p class="popup__description">или <a class="link" href="#">Войти</a></p>
+            <p class="popup__description">или <a class="link" id="login-link" href="#">Войти</a></p>
           </div>
         </form>
       </div>
@@ -177,13 +177,13 @@
         <div class="footer__navigation">
           <div class="footer__links">
             <a href="/" class="footer__link">Главная</a>
-            <a href="#" class="footer__link">Яндекс.Практикум</a>
+            <a href="https://praktikum.yandex.ru/" target="_blank" class="footer__link">Яндекс.Практикум</a>
           </div>
           <div class="footer__socials">
-            <a href="#" class="footer__social">
-              <img src="<%=require('./images/facebook-icon.svg').default%>" alt="facebook-icon">
+            <a href="https://www.instagram.com/elftatius/" target="_blank" class="footer__social">
+              <img src="<%=require('./images/instagram-icon.svg').default%>" alt="instagram-icon">
             </a>
-            <a href="#" class="footer__social">
+            <a href="https://github.com/elftatius" target="_blank" class="footer__social">
               <img src="<%=require('./images/github-icon.svg').default%>" alt="github-icon">
             </a>
           </div>
