--- a/src/my-profile.html
+++ b/src/my-profile.html
@@ -121,13 +121,13 @@
         <div class="footer__navigation">
           <div class="footer__links">
             <a href="/" class="footer__link">Главная</a>
-            <a href="#" class="footer__link">Яндекс.Практикум</a>
+            <a href="https://praktikum.yandex.ru/" target="_blank" class="footer__link">Яндекс.Практикум</a>
           </div>
           <div class="footer__socials">
-            <a href="#" class="footer__social">
-              <img src="<%=require('./images/facebook-icon.svg').default%>" alt="facebook-icon">
+            <a href="https://www.instagram.com/elftatius/" target="_blank" class="footer__social">
+              <img src="<%=require('./images/instagram-icon.svg').default%>" alt="instagram-icon">
             </a>
-            <a href="#" class="footer__social">
+            <a href="https://github.com/elftatius" target="_blank" class="footer__social">
               <img src="<%=require('./images/github-icon.svg').default%>" alt="github-icon">
             </a>
           </div>
