--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <div class="hero__container">
         <h1 class="hero__title">Что творится в мире?</h1>
         <p class="hero__description">Находите самые свежие статьи на любую тему и сохраняйте в своём личном кабинете.</p>
-        <form class="hero__search" action="">
+        <form class="hero__search">
           <input type="text" class="hero__input" placeholder="Введите тему новости">
           <input type="submit" class="hero__submit" value="Искать">
         </form>
@@ -126,16 +126,16 @@
         <form class="popup__form" novalidate name="login">
           <div class="input-container">
             <label for="login-email" class="popup__label">Email</label>
-            <input type="email" name="login-email" class="popup__input" placeholder="Введите почту" required>
+            <input type="email" id ="login-email" name="login-email" class="popup__input" placeholder="Введите почту" required>
             <span class="error-message" id="login-error-email">Неправильный формат email</span>
           </div>
           <div class="input-container">
             <label for="login-password" class="popup__label">Пароль</label>
-            <input type="password" name="login-password" class="popup__input" placeholder="Введите пароль" required minlength="8">
+            <input type="password" id="login-password" name="login-password" class="popup__input" placeholder="Введите пароль" required minlength="8">
             <span class="error-message" id="login-error-password"></span>
           </div>
           <div class="text-center">
-            <button disabled type class="button button_is-fullwidth">Войти</button>
+            <button disabled type="submit" class="button button_is-fullwidth">Войти</button>
             <p class="popup__description">или <a class="link" data-close-popup="#login-popup" data-open-popup="#signup-popup" href="#">Зарегистрироваться</a></p>
           </div>
         </form>
@@ -148,24 +148,24 @@
         <form class="popup__form" novalidate name="signup">
           <div class="input-container">
             <label for="signup-name" class="popup__label">Имя</label>
-            <input type="text" name="signup-name" class="popup__input" placeholder="Введите имя" required minlength="2" maxlength="30">
+            <input type="text" id="signup-name" name="signup-name" class="popup__input" placeholder="Введите имя" required minlength="2" maxlength="30">
             <span class="error-message" id="signup-error-name"></span>
           </div>
           <div class="input-container">
             <label for="signup-email" class="popup__label">Email</label>
-            <input type="email" name="signup-email" class="popup__input" placeholder="Введите почту" required>
+            <input type="email" id="signup-email" name="signup-email" class="popup__input" placeholder="Введите почту" required>
             <span class="error-message" id="signup-error-email">Неправильный формат email</span>
           </div>
           <div class="input-container">
             <label for="signup-password" class="popup__label">Пароль</label>
-            <input type="password" name="signup-password" class="popup__input" placeholder="Введите пароль" required minlength="8">
+            <input type="password" id="signup-password" name="signup-password" class="popup__input" placeholder="Введите пароль" required minlength="8">
             <span class="error-message" id="signup-error-password"></span>
           </div>
           <div class="popup__error" id="signup-form-error">
             Такой пользователь уже есть
           </div>
           <div class="text-center">
-            <button type class="button button_brand button_is-fullwidth">Зарегистрироваться</button>
+            <button type="submit" class="button button_brand button_is-fullwidth">Зарегистрироваться</button>
             <p class="popup__description">или <a class="link" data-close-popup="#signup-popup" data-open-popup="#login-popup" href="#">Войти</a></p>
           </div>
         </form>
