--- a/src/index.html
+++ b/src/index.html
@@ -9,27 +9,10 @@
   <link rel="shortcut icon" href="<%=require('./images/favicon.png').default%>" type="image/x-icon">
 </head>
 <body>
+  <div class="error" id="network-error">
+    Ошибка сети. Попробуйте перезагрузить страницу
+  </div>
   <div class="root">
-    <div class="error" id="network-error">
-      Ошибка сети. Попробуйте перезагрузить страницу
-    </div>
-    <header class="header">
-      <div class="header__container">
-        <div class="header__logo">NewsExplorer</div>
-        <img class="header__burger" src="<%=require('./images/menu-icon-white.svg').default%>" alt="menu icon">
-        <ul class="header__nav">
-          <li>
-            <a class="header__link header__link_active" href="#">Главная</a>
-          </li>
-          <li>
-            <a class="header__link" href="#">Сохраненные статьи</a>
-          </li>
-          <li>
-            <a class="header__button" href="#" data-open-popup="#login-popup">Авторизоваться</a>
-          </li>
-        </ul>
-      </div>
-    </header>
     <section class="hero">
       <div class="hero__container">
         <h1 class="hero__title">Что творится в мире?</h1>
@@ -125,6 +108,47 @@
     </footer>
   </div>
 
+  <!-- TEMPLATES -->
+
+  <template style="display: none;" id="header-unauthorized-template">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__logo">NewsExplorer</div>
+        <img class="header__burger" src="<%=require('./images/menu-icon-white.svg').default%>" alt="menu icon">
+        <ul class="header__nav">
+          <li>
+            <a class="header__link header__link_active" href="#">Главная</a>
+          </li>
+          <li>
+            <a class="header__button" href="#" data-open-popup="#login-popup">Авторизоваться</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+  </template>
+
+  <template style="display: none;" id="header-authorized-template">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__logo">NewsExplorer</div>
+        <img class="header__burger" src="<%=require('./images/menu-icon-white.svg').default%>" alt="menu icon">
+        <ul class="header__nav">
+          <li>
+            <a class="header__link header__link_active" href="#">Главная</a>
+          </li>
+          <li>
+            <a class="header__link" href="/my-profile.html">Сохраненные статьи</a>
+          </li>
+          <li>
+            <a class="header__button" href="#">
+              Грета
+              <img src="<%=require('./images/logout-icon-white.svg').default%>" alt="logout-icon" class="header__button-icon">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
+  </template>
 
   <template style="display: none;" id="search-preloader">
     <section class="notification">
