--- a/src/my-profile.html
+++ b/src/my-profile.html
@@ -6,30 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>News exprorer</title>
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css %>">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="<%=require('./images/favicon.png').default%>" type="image/x-icon">
 </head>
 <body>
   <div class="root">
-    <header class="header header_dark">
-      <div class="header__container">
-        <div class="header__logo header__logo_dark">NewsExplorer</div>
-        <img class="header__burger" src="<%=require('./images/menu-icon-black.svg').default%>" alt="menu icon">
-        <ul class="header__nav">
-          <li>
-            <a class="header__link header__link_dark header__link_active" href="#">Главная</a>
-          </li>
-          <li>
-            <a class="header__link header__link_dark" href="#">Сохраненные статьи</a>
-          </li>
-          <li>
-            <a class="header__button header__button_dark" href="#">
-              Грета
-              <img src="<%=require('./images/logout-icon.svg').default%>" alt="logout-icon" class="header__button-icon">
-            </a>
-          </li>
-        </ul>
-      </div>
-    </header>
     <section class="section section_white section_top">
       <div class="section__container">
         <p class="section__aside">Сохранённые статьи</p>
@@ -134,6 +114,31 @@
         </div>
       </div>
     </footer>
+
+    <!-- TEMPLATES -->
+
+    <template style="display: none;" id="header-authorized-template">
+      <header class="header header_dark">
+        <div class="header__container">
+          <div class="header__logo header__logo_dark">NewsExplorer</div>
+          <img class="header__burger" src="<%=require('./images/menu-icon-black.svg').default%>" alt="menu icon">
+          <ul class="header__nav">
+            <li>
+              <a class="header__link header__link_dark" href="/">Главная</a>
+            </li>
+            <li>
+              <a class="header__link header__link_dark header__link_active" href="#">Сохраненные статьи</a>
+            </li>
+            <li>
+              <a class="header__button header__button_dark" href="#">
+                Грета
+                <img src="<%=require('./images/logout-icon-black.svg').default%>" alt="logout-icon" class="header__button-icon">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </header>
+    </template>
   </div>
   <script src="<%= htmlWebpackPlugin.files.js %>"></script>
 </body>
