--- a/src/index.html
+++ b/src/index.html
@@ -35,58 +35,7 @@
         </div>
       </div>
     </section>
-    <div class="popup" id="login-popup">
-      <div class="popup__content">
-        <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close" data-close-popup="#login-popup">
-        <h3 class="popup__title">Вход</h3>
-        <form class="popup__form" novalidate name="login">
-          <div class="input-container">
-            <label for="login-email" class="popup__label">Email</label>
-            <input type="email" id ="login-email" name="login-email" class="popup__input" placeholder="Введите почту" required>
-            <span class="error-message" id="login-error-email">Неправильный формат email</span>
-          </div>
-          <div class="input-container">
-            <label for="login-password" class="popup__label">Пароль</label>
-            <input type="password" id="login-password" name="login-password" class="popup__input" placeholder="Введите пароль" required minlength="8">
-            <span class="error-message" id="login-error-password"></span>
-          </div>
-          <div class="text-center">
-            <button disabled type="submit" class="button button_is-fullwidth">Войти</button>
-            <p class="popup__description">или <a class="link" data-close-popup="#login-popup" data-open-popup="#signup-popup" href="#">Зарегистрироваться</a></p>
-          </div>
-        </form>
-      </div>
-    </div>
-    <div class="popup" id="signup-popup">
-      <div class="popup__content">
-        <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close" data-close-popup="#signup-popup">
-        <h3 class="popup__title">Регистрация</h3>
-        <form class="popup__form" novalidate name="signup">
-          <div class="input-container">
-            <label for="signup-name" class="popup__label">Имя</label>
-            <input type="text" id="signup-name" name="signup-name" class="popup__input" placeholder="Введите имя" required minlength="2" maxlength="30">
-            <span class="error-message" id="signup-error-name"></span>
-          </div>
-          <div class="input-container">
-            <label for="signup-email" class="popup__label">Email</label>
-            <input type="email" id="signup-email" name="signup-email" class="popup__input" placeholder="Введите почту" required>
-            <span class="error-message" id="signup-error-email">Неправильный формат email</span>
-          </div>
-          <div class="input-container">
-            <label for="signup-password" class="popup__label">Пароль</label>
-            <input type="password" id="signup-password" name="signup-password" class="popup__input" placeholder="Введите пароль" required minlength="8">
-            <span class="error-message" id="signup-error-password"></span>
-          </div>
-          <div class="popup__error" id="signup-form-error">
-            Такой пользователь уже есть
-          </div>
-          <div class="text-center">
-            <button type="submit" class="button button_brand button_is-fullwidth">Зарегистрироваться</button>
-            <p class="popup__description">или <a class="link" data-close-popup="#signup-popup" data-open-popup="#login-popup" href="#">Войти</a></p>
-          </div>
-        </form>
-      </div>
-    </div>
+
     <footer class="footer">
       <div class="footer__container">
         <div class="footer__site-info">© 2020 Supersite, Powered by News API</div>
@@ -110,6 +59,7 @@
 
   <!-- TEMPLATES -->
 
+  <!-- HEADER UNAUTHORIZED TEMPLATE -->
   <template style="display: none;" id="header-unauthorized-template">
     <header class="header">
       <div class="header__container">
@@ -120,13 +70,14 @@
             <a class="header__link header__link_active" href="#">Главная</a>
           </li>
           <li>
-            <a class="header__button" href="#" data-open-popup="#login-popup">Авторизоваться</a>
+            <a class="header__button" href="#" id="signin-open-popup-button">Авторизоваться</a>
           </li>
         </ul>
       </div>
     </header>
   </template>
 
+  <!-- HEADER AUTHORIZED TEMPLATE -->
   <template style="display: none;" id="header-authorized-template">
     <header class="header">
       <div class="header__container">
@@ -150,6 +101,66 @@
     </header>
   </template>
 
+  <!-- SIGNIN FORM TEMPLATE -->
+  <template style="display: none;" id="signin-form-template">
+    <h3 class="popup__title">Вход</h3>
+    <form class="popup__form" novalidate name="login" id="signin-form">
+      <div class="input-container">
+        <label for="login-email" class="popup__label">Email</label>
+        <input type="email" id ="login-email" name="login-email" class="popup__input" placeholder="Введите почту" required>
+        <span class="error-message" id="login-error-email"></span>
+      </div>
+      <div class="input-container">
+        <label for="login-password" class="popup__label">Пароль</label>
+        <input type="password" id="login-password" name="login-password" class="popup__input" placeholder="Введите пароль" required minlength="8" maxlength="32">
+        <span class="error-message" id="login-error-password"></span>
+      </div>
+      <div class="text-center">
+        <button disabled type="submit" class="button button_is-fullwidth">Войти</button>
+        <p class="popup__description">или <a class="link" id="open-signup" href="#">Зарегистрироваться</a></p>
+      </div>
+    </form>
+  </template>
+
+  <!-- SIGNUP FORM TEMPLATE -->
+  <template style="display: none;" id="signup-form-template">
+    <h3 class="popup__title">Регистрация</h3>
+    <form class="popup__form" novalidate name="signup" id="signup-form">
+      <div class="input-container">
+        <label for="signup-name" class="popup__label">Имя</label>
+        <input type="text" id="signup-name" name="signup-name" class="popup__input" placeholder="Введите имя" required minlength="2" maxlength="30">
+        <span class="error-message" id="signup-error-name"></span>
+      </div>
+      <div class="input-container">
+        <label for="signup-email" class="popup__label">Email</label>
+        <input type="email" id="signup-email" name="signup-email" class="popup__input" placeholder="Введите почту" required>
+        <span class="error-message" id="signup-error-email"></span>
+      </div>
+      <div class="input-container">
+        <label for="signup-password" class="popup__label">Пароль</label>
+        <input type="password" id="signup-password" name="signup-password" class="popup__input" placeholder="Введите пароль" required minlength="8" maxlength="32">
+        <span class="error-message" id="signup-error-password"></span>
+      </div>
+      <!-- <div class="popup__error" id="signup-form-error">
+        Такой пользователь уже есть
+      </div> -->
+      <div class="text-center">
+        <button type="submit" class="button button_brand button_is-fullwidth">Зарегистрироваться</button>
+        <p class="popup__description">или <a class="link" id="open-signin" href="#">Войти</a></p>
+      </div>
+    </form>
+  </template>
+
+  <!-- POPUP TEMPLATE -->
+  <template style="display: none;" id="popup-template">
+    <div class="popup">
+      <div class="popup__content">
+        <img src="<%=require('./images/close.svg').default%>" alt="" class="popup__close">
+      </div>
+    </div>
+  </template>
+
+  <!-- PRELOADER TEMPLATE -->
   <template style="display: none;" id="search-preloader">
     <section class="notification">
       <img class="preloader" src="<%=require('./images/preloader.png').default%>" alt="preloader">
@@ -157,6 +168,7 @@
     </section>
   </template>
 
+  <!-- CARDS CONTAINER TEMPLATE -->
   <template style="display: none;" id="cards-container-template">
     <div class="section__container">
       <h2 class="section__title">Результаты поиска</h2>
@@ -164,10 +176,11 @@
     </div>
   </template>
 
+  <!-- CARD TEMPLATE -->
   <template style="display: none;" id="card-template">
     <a class="card" href="#">
       <div class="card__info">
-        <div class="card__tag">Природа</div>
+        <div class="card__tag"></div>
         <div class="card__action">
           <div class="card__action-tooltip">Войдите, чтобы сохранять статьи</div>
           <div class="card__icon">
@@ -177,20 +190,22 @@
       </div>
       <div class="card__image"></div>
       <div class="card__container">
-        <p class="card__date">2 августа, 2019</p>
-        <p class="card__title">Национальное достояние – парки</p>
-        <p class="card__description">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
-        <p class="card__source">Лента.ру</p>
+        <p class="card__date"></p>
+        <p class="card__title"></p>
+        <p class="card__description"></p>
+        <p class="card__source"></p>
       </div>
     </a>
   </template>
 
+  <!-- SHOW MORE BUTTON TEMPLATE -->
   <template style="display: none;" id="show-more-button-template">
     <div class="text-center padding-bottom-80">
       <a class="button" id="show-more-news" href="#">Показать еще</a>
     </div>
   </template>
 
+  <!-- NO RESULTS TEMPLATE -->
   <template style="display: none;" id="no-results-template">
     <section class="notification">
       <img class="notification__icon" src="<%=require('./images/not-found-icon.svg').default%>" alt="not-found-icon">
