--- a/src/my-profile.html
+++ b/src/my-profile.html
@@ -13,87 +13,13 @@
     <section class="section section_white section_top">
       <div class="section__container">
         <p class="section__aside">Сохранённые статьи</p>
-        <h2 class="section__title">Грета, у вас 5 сохранённых статей</h2>
-        <p class="section__paragraph">По ключевым словам: <b>Природа, Тайга</b> и <b>2-м другим</b></p>
+        <h2 class="section__title" id="hello-message"></h2>
+        <p class="section__paragraph" id="summary-message"></p>
       </div>
     </section>
     <section class="section">
-      <div class="section__container">
-          <div class="cards">
-            <a class="card" href="#">
-              <div class="card__info">
-                <div class="card__tag">Природа</div>
-                <div class="card__action">
-                  <div class="card__action-tooltip">Убрать из сохранённых</div>
-                  <div class="card__icon">
-                    <img src="<%=require('./images/trash-icon.svg').default%>" alt="bookmark card">
-                  </div>
-                </div>
-              </div>
-              <div class="card__image"></div>
-              <div class="card__container">
-                <p class="card__date">2 августа, 2019</p>
-                <p class="card__title">Национальное достояние – парки</p>
-                <p class="card__description">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
-                <p class="card__source">Лента.ру</p>
-              </div>
-            </a>
-            <a class="card" href="#">
-              <div class="card__info">
-                <div class="card__tag">Природа</div>
-                <div class="card__action">
-                  <div class="card__action-tooltip">Убрать из сохранённых</div>
-                  <div class="card__icon">
-                    <img src="<%=require('./images/trash-icon.svg').default%>" alt="bookmark card">
-                  </div>
-                </div>
-              </div>
-              <div class="card__image"></div>
-              <div class="card__container">
-                <p class="card__date">2 августа, 2019</p>
-                <p class="card__title">Лесные огоньки: история одной фотографии</p>
-                <p class="card__description">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного из местных чудес природы.</p>
-                <p class="card__source">Медуза</p>
-              </div>
-            </a>
-            <a class="card" href="#">
-              <div class="card__info">
-                <div class="card__tag">Природа</div>
-                <div class="card__action">
-                  <div class="card__action-tooltip">Убрать из сохранённых</div>
-                  <div class="card__icon">
-                    <img src="<%=require('./images/trash-icon.svg').default%>" alt="bookmark card">
-                  </div>
-                </div>
-              </div>
-              <div class="card__image"></div>
-              <div class="card__container">
-                <p class="card__date">2 августа, 2019</p>
-                <p class="card__title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</p>
-                <p class="card__description">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
-                <p class="card__source">Риа</p>
-              </div>
-            </a>
-            <!-- <a class="card" href="#">
-              <div class="card__info">
-                <div class="card__tag">Природа</div>
-                <div class="card__action">
-                  <div class="card__action-tooltip">Войдите, чтобы сохранять статьи</div>
-                  <div class="card__icon">
-                    <img src="<%=require('./images/bookmark-icon.svg').default%>" alt="bookmark card">
-                  </div>
-                </div>
-              </div>
-              <div class="card__image"></div>
-              <div class="card__container">
-                <p class="card__date">2 августа, 2019</p>
-                <p class="card__title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</p>
-                <p class="card__description">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
-                <p class="card__source">Риа</p>
-              </div>
-            </a> -->
-          </div>
-      </div>
+      <section class="section" id="news-container">
+      </section>
     </section>
     <footer class="footer">
       <div class="footer__container">
@@ -115,30 +41,6 @@
       </div>
     </footer>
 
-    <!-- TEMPLATES -->
-
-    <template style="display: none;" id="header-authorized-template">
-      <header class="header header_dark">
-        <div class="header__container">
-          <div class="header__logo header__logo_dark">NewsExplorer</div>
-          <img class="header__burger" src="<%=require('./images/menu-icon-black.svg').default%>" alt="menu icon">
-          <ul class="header__nav">
-            <li>
-              <a class="header__link header__link_dark" href="/">Главная</a>
-            </li>
-            <li>
-              <a class="header__link header__link_dark header__link_active" href="#">Сохраненные статьи</a>
-            </li>
-            <li>
-              <a class="header__button header__button_dark" href="#">
-                Грета
-                <img src="<%=require('./images/logout-icon-black.svg').default%>" alt="logout-icon" class="header__button-icon">
-              </a>
-            </li>
-          </ul>
-        </div>
-      </header>
-    </template>
   </div>
   <script src="<%= htmlWebpackPlugin.files.js %>"></script>
 </body>
